@@ -4,51 +4,33 @@ package kz.kasky.cinemaroom.services;
 import kz.kasky.cinemaroom.models.dto.MovieTheaterDto;
 import kz.kasky.cinemaroom.models.entities.MovieTheater;
 import kz.kasky.cinemaroom.repositories.MovieTheaterRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class MovieTheaterService {
 
     private final MovieTheaterRepository movieTheaterRepository;
 
-
-    public MovieTheaterService(MovieTheaterRepository movieTheaterRepository) {
-        this.movieTheaterRepository = movieTheaterRepository;
-    }
-
-
     public List<MovieTheaterDto> getAllMovieTheater() {
 
-        Iterable<MovieTheaterDto> movieTheaters = movieTheaterRepository.findAll()
+        return movieTheaterRepository.findAll()
                 .stream()
                 .map(this::mapToMovieTheaterDto)
-                .collect(Collectors.toList());
-
-        List<MovieTheaterDto> movieTheaterDtoList = new ArrayList<>();
-
-        movieTheaters.forEach(movieTheaterDtoList::add);
-
-        movieTheaterDtoList.sort(Comparator.comparing(MovieTheaterDto::getName));
-
-
-        return movieTheaterDtoList;
+                .sorted(Comparator.comparing(MovieTheaterDto::getName))
+                .toList();
     }
 
-
-
     public MovieTheaterDto getMovieTheaterById(Integer id) {
-
-
         Optional<MovieTheater> movieTheater = movieTheaterRepository.findById(id);
-
 
         if (movieTheater.isEmpty()) {
             throw new ResponseStatusException(
@@ -56,10 +38,8 @@ public class MovieTheaterService {
             );
         }
 
-
         return mapToMovieTheaterDto(movieTheater.get());
     }
-
 
     public void saveMovie(MovieTheaterDto movieTheaterDto) {
         MovieTheater movieTheater = mapToMovieTheater(movieTheaterDto);
@@ -67,18 +47,15 @@ public class MovieTheaterService {
         movieTheaterRepository.save(movieTheater);
     }
 
-    public void updateMovie(Integer id, MovieTheaterDto movieTheaterDto) {
+    public String updateMovie(Integer id, MovieTheaterDto movieTheaterDto) {
         MovieTheater movieTheater = movieTheaterRepository.findById(id).get();
 
         movieTheater.setName(movieTheaterDto.getName());
         movieTheater.setAddress(movieTheaterDto.getAddress());
         movieTheater.setMaxSeats(movieTheaterDto.getMaxSeats());
 
-        movieTheaterRepository.save(movieTheater);
+        return movieTheaterRepository.save(movieTheater).getName();
     }
-
-
-
 
     public void deleteMovie(Integer id) {
         movieTheaterRepository.deleteById(id);
@@ -92,13 +69,7 @@ public class MovieTheaterService {
                 .collect(Collectors.toList());
     }
 
-
-
-
-
     private MovieTheaterDto mapToMovieTheaterDto(MovieTheater movieTheater) {
-
-
         return MovieTheaterDto.builder()
                 .id(movieTheater.getId())
                 .name(movieTheater.getName())
@@ -108,10 +79,7 @@ public class MovieTheaterService {
                 .build();
     }
 
-
     public MovieTheater mapToMovieTheater(MovieTheaterDto movieTheaterDto) {
-
-
         return MovieTheater.builder()
                 .id(movieTheaterDto.getId())
                 .name(movieTheaterDto.getName())
